--- a/configs/nanogpt_noloss_pretraining.yaml
+++ b/configs/nanogpt_noloss_pretraining.yaml
@@ -45,5 +45,5 @@ ddp:
 
 system:
   device: 'cuda:0'  # examples: 'cpu', 'cuda', 'cuda:0', 'cuda:1' etc., or try 'mps' on macbooks
-  dtype: 'bfloat16'  # 'float32', 'bfloat16', or 'float16', the latter will auto implement a GradScaler
+  dtype: 'float16'  # 'float32', 'bfloat16', or 'float16', the latter will auto implement a GradScaler
   compile: true  # use PyTorch 2.0 to compile the model to be faster
