--- a/configs/gpt2_scaled_noloss_pretraining.yaml
+++ b/configs/gpt2_scaled_noloss_pretraining.yaml
@@ -1,7 +1,7 @@
 out_dir: 'checkpoints'
-eval_interval: 2000
+eval_interval: 5
 
-eval_iters: 200
+eval_iters: 1
 eval_only: false  # if True, script exits right after the first eval
 always_save_checkpoint: true  # if True, always save a checkpoint after each eval
 init_from: 'scratch'  # 'scratch' or 'resume' or 'gpt2*'
@@ -10,26 +10,28 @@ task: pretraining
 logging:
   wandb_log: True  # disabled by default
   wandb_project: 'midi-gpt2'
-  wandb_run_name: midi-gpt2-pretraining-${now:%Y-%m-%d-%H-%M}
+  wandb_run_name: midi-gpt2-scaled-pretraining-${now:%Y-%m-%d-%H-%M}
   log_interval: 100
   run_name:
 
 data:
   tokenizer: "NoLossTokenizer"
-  dataset_name: "basic-mid"
-  gradient_accumulation_steps: 40  # used to simulate larger batch sizes
-  batch_size: 12  # if gradient_accumulation_steps > 1, this is the micro-batch size
+  dataset_name: "giant-mid"
+  gradient_accumulation_steps: 20  # used to simulate larger batch sizes
+  batch_size: 16 # if gradient_accumulation_steps > 1, this is the micro-batch size
+
+architecture: "gpt2_scaled"  # "gpt2_minimal", "gpt2_medium", "gpt2_large", "gpt2_xl", "custom"
 
 model:
-  n_layer: 12
-  n_head: 12
-  n_embd: 768
+  n_layer: 12  # use if architecture == "custom"
+  n_head: 12  # use if architecture == "custom"
+  n_embd: 768  # use if architecture == "custom"
   dropout: 0.0  # for pretraining 0 is good, for finetuning try 0.1+
   bias: false  # do we use bias inside LayerNorm and Linear layers?
 
 optimizer:
-  learning_rate: 6e-4  # max learning rate
-  max_iters: 600000  # total number of training iterations
+  learning_rate: 1e-3  # small network - we can go up a little
+  max_iters: 320 # total number of training iterations - ~5B tokens for all training
   weight_decay: 0.1
   beta1: 0.9
   beta2: 0.95
@@ -37,9 +39,9 @@ optimizer:
 
 lr:
   decay_lr: true  # whether to decay the learning rate
-  warmup_iters: 2000  # how many steps to warm up for
-  lr_decay_iters: 600000  # should be ~= max_iters per Chinchilla
-  min_lr: 6e-5  # minimum learning rate, should be ~= learning_rate/10 per Chinchilla
+  warmup_iters: 50  # how many steps to warm up for
+  lr_decay_iters: 320  # should be ~= max_iters per Chinchilla
+  min_lr: 1e-4  # minimum learning rate, should be ~= learning_rate/10 per Chinchilla
 
 ddp:
   backend: 'nccl'  # 'nccl', 'gloo', etc.
