--- a/configs/gpt2_medium_noloss_pretraining.yaml
+++ b/configs/gpt2_medium_noloss_pretraining.yaml
@@ -1,3 +1,6 @@
+defaults:
+  - model: gpt2_medium # "gpt2_minimal", "gpt2", "gpt2_large", "gpt2_xl"
+
 out_dir: 'checkpoints'
 eval_interval: 1000
 
@@ -21,15 +24,6 @@ data:
   gradient_accumulation_steps: 40  # used to simulate larger batch sizes
   batch_size: 16 # if gradient_accumulation_steps > 1, this is the micro-batch size
 
-architecture: "gpt2_medium"  # "gpt2_minimal", "gpt2_medium", "gpt2_large", "gpt2_xl", "custom"
-
-model:
-  n_layer: 12  # use if architecture == "custom"
-  n_head: 12  # use if architecture == "custom"
-  n_embd: 768  # use if architecture == "custom"
-  dropout: 0.0  # for pretraining 0 is good, for finetuning try 0.1+
-  bias: false  # do we use bias inside LayerNorm and Linear layers?
-
 optimizer:
   learning_rate: 6e-4  # max learning rate
   max_iters: 16000  # total number of training iterations ~500B tokens
@@ -49,5 +43,5 @@ ddp:
 
 system:
   device: 'cuda'  # examples: 'cpu', 'cuda', 'cuda:0', 'cuda:1' etc., or try 'mps' on macbooks
-  dtype: 'bfloat16'  # 'float32', 'bfloat16', or 'float16', the latter will auto implement a GradScaler
+  dtype: 'float16'  # 'float32', 'bfloat16', or 'float16', the latter will auto implement a GradScaler
   compile: true  # use PyTorch 2.0 to compile the model to be faster
