--- a/gpt2/configs/gpt2_noloss_pretraining.yaml
+++ b/gpt2/configs/gpt2_noloss_pretraining.yaml
@@ -1,6 +1,6 @@
 defaults:
   - model: gpt2 # "gpt2_minimal", "gpt2_medium", "gpt2_large", "gpt2_xl"
-  - data: exponential-mid
+  - data: exponential-giant
   - logging: pretraining
   - lr: pretraining-large
 
