--- a/gpt2/configs/data/awesome-giant.yaml
+++ b/gpt2/configs/data/awesome-giant.yaml
@@ -1,6 +1,6 @@
 tokenizer: "AwesomeTokenizer"
-dataset_name: "giant-mid-coarse"
+dataset_name: "giant-mid-coarse-augmented"
 gradient_accumulation_steps: 20  # used to simulate larger batch sizes
+# 32 * 1024 * 4 / 1000 ~= 131Mb
 batch_size: 32  # if gradient_accumulation_steps > 1, this is the micro-batch size
-max_iters: 2000  # total number of training iterations, ~20 times giant dataset
-augmentation_probability: 0
+max_iters: 4000  # total number of training iterations, ~10 times giant dataset
