--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ hydra-core>=1.3.2
 midi_tokenizers @ git+https://github.com/Nospoko/midi-quantizers@MIDI-146/hf-tokenizer
 numpy~=1.26.3
 pandas~=2.1.4
+python-dotenv==1.0.0
 streamlit-pianoroll>=0.7.1
 torch>=2.1.2
 transformers>=4.39.3
