--- a/gpt2/configs/data/awesome-colossal.yaml
+++ b/gpt2/configs/data/awesome-colossal.yaml
@@ -1,4 +1,4 @@
-tokenizer: "AwesomeTokenizer"
+tokenizer: "AwesomeMidiTokenizer"
 dataset_name: "colossal-mid-coarse-augmented"
 gradient_accumulation_steps: 20  # used to simulate larger batch sizes
 # 32 * 1024 * 4 / 1000 ~= 131Mb
