--- a/gpt2/configs/gpt2_pretraining.yaml
+++ b/gpt2/configs/gpt2_pretraining.yaml
@@ -1,6 +1,7 @@
 defaults:
   - model: gpt2 # "gpt2_minimal", "gpt2_medium", "gpt2_large", "gpt2_xl"
   - data: exponential-giant
+  - dataset: giant-mid-coarse-augmented
   - logging: pretraining
   - lr: pretraining-large
 
