--- a/gpt2/configs/data/exponential-giant.yaml
+++ b/gpt2/configs/data/exponential-giant.yaml
@@ -1,4 +1,4 @@
-tokenizer: "NoLossTokenizer"
+tokenizer: "ExponentialTimeTokenizer"
 gradient_accumulation_steps: 20  # used to simulate larger batch sizes
 # 32 * 1024 * 4 / 1000 ~= 131Mb
 batch_size: 32  # if gradient_accumulation_steps > 1, this is the micro-batch size
