--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 datasets>=2.17.1
 fortepyan>=0.2.8
 hydra-core>=1.3.2
-midi_tokenizers @ git+https://github.com/Nospoko/midi-quantizers@MIDI-146/hf-tokenizer
-numpy~=1.26.3
+midi_tokenizers @ git+https://github.com/Nospoko/midi-quantizers
 pandas~=2.1.4
 python-dotenv==1.0.0
 streamlit-pianoroll>=0.7.1
