--- a/gpt2/configs/dataset/colossal-long-coarse-augmented.yaml
+++ b/gpt2/configs/dataset/colossal-long-coarse-augmented.yaml
@@ -6,5 +6,6 @@ pause_detection_threshold: 4
 tokenizer_parameters:
   min_time_unit: 0.01
   n_velocity_bins: 32
-augmentation_probability: 0.2
-augmentation_repetitions: 5
+augmentation:
+  speed_change_factors: [0.95, 0.975, 1.025, 1.05]
+  max_pitch_shift: 5
