mask_sequence method masking on notes

--- a/gpt2/configs/gpt2_small_pretraining.yaml
+++ b/gpt2/configs/gpt2_small_pretraining.yaml
@@ -1,7 +1,7 @@
 defaults:
   - model: gpt2_scaled # "gpt2_minimal", "gpt2_medium", "gpt2_large", "gpt2_xl"
   - data: exponential-giant
-  - dataset: giant-mid-coarse-augmented
+  - dataset: giant-mid
   - logging: pretraining
   - lr: pretraining-small
   - _self_
