--- a/gpt2/configs/lr/pretraining-small.yaml
+++ b/gpt2/configs/lr/pretraining-small.yaml
@@ -2,3 +2,4 @@ decay_lr: true  # whether to decay the learning rate
 warmup_iters: 50  # how many steps to warm up for
 lr_decay_iters: ${data.max_iters}  # should be ~= max_iters per Chinchilla
 min_lr: 1e-4  # minimum learning rate, should be ~= learning_rate/10 per Chinchilla
+learning_rate: 3e-3  # max learning rate
