--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
-datasets~=2.17.1
+datasets>=2.17.1
 fortepyan>=0.2.8
-midi_tokenizers @ git+https://github.com/Nospoko/midi-quantizers@MIDI-146/hf-tokenizer
-numpy~=1.26.3
+hydra-core>=1.3.2
+midi_tokenizers @ git+https://github.com/Nospoko/midi-tokenizers
 pandas~=2.1.4
+python-dotenv==1.0.0
 streamlit-pianoroll>=0.7.1
-torch~=2.1.2
+torch>=2.1.2
+transformers>=4.39.3
+wandb>=0.15.0
