--- a/gpt2/configs/gpt2_small_pretraining.yaml
+++ b/gpt2/configs/gpt2_small_pretraining.yaml
@@ -1,5 +1,5 @@
 defaults:
-  - model: gpt2_scaled # "gpt2_minimal", "gpt2_medium", "gpt2_large", "gpt2_xl"
+  - model: gpt2_small # "gpt2_minimal", "gpt2_medium", "gpt2_large", "gpt2_xl"
   - data: exponential-giant
   - dataset: giant-mid
   - logging: pretraining
