standardize dataset logic: move tokenization to Torch datasets

--- a/gpt2/configs/dataset/bassextracted.yaml
+++ b/gpt2/configs/dataset/bassextracted.yaml
@@ -1,12 +1,8 @@
 base_dataset_name: "roszcz/maestro-sustain-v2"
 extra_datasets: ["roszcz/giant-midi-sustain-v2", "roszcz/pianofor-ai-sustain-v2"]
 notes_per_record: 60
-sequence_step: 30
+step: 30
 pause_detection_threshold: 4
 augmentation:
   speed_change_factors: [0.95, 0.975, 1.025, 1.05]
   max_pitch_shift: 5
-tokenizer_parameters:
-  min_time_unit: 0.01
-  n_velocity_bins: 32
-sequence_length: 512
