--- a/gpt2/configs/dataset/giant-long.yaml
+++ b/gpt2/configs/dataset/giant-long.yaml
@@ -1,11 +1,8 @@
 base_dataset_name: "roszcz/maestro-sustain-v2"
 extra_datasets: ["roszcz/giant-midi-sustain-v2"]
-sequence_length: 1024
-sequence_step: 128
+notes_per_record: 120
+step: 60
 pause_detection_threshold: 4
-tokenizer_parameters:
-  min_time_unit: 0.01
-  n_velocity_bins: 32
 augmentation:
   speed_change_factors: [0.95, 0.975, 1.025, 1.05]
   max_pitch_shift: 5
