--- a/gpt2/configs/debugging.yaml
+++ b/gpt2/configs/debugging.yaml
@@ -11,7 +11,7 @@ eval_interval: 10
 eval_iters: 10
 eval_only: false  # if True, script exits right after the first eval
 always_save_checkpoint: false  # if True, always save a checkpoint after each eval
-init_from: 'midi-gpt2-0M-pretraining-2024-06-26-12-00.pt'  # 'scratch' or 'midi-gpt2*'
+init_from: 'scratch'  # 'scratch' or 'midi-gpt2*'
 task: subsequence
 
 optimizer:
